--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,27 @@
 {
+    "name": "neoblack/demo-symfony-progress-bar",
+    "description": "This symfony demo application contains two progress bars, HTML5 native progress bar and a bootstrap framework version.",
     "type": "project",
     "license": "proprietary",
     "require": {
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.10",
+        "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-foundation": "5.0.*",
+        "symfony/routing": "5.0.*",
+        "symfony/templating": "5.0.*",
+        "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
+        "symfony/maker-bundle": "^1.15"
     },
     "config": {
         "preferred-install": {
