--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.10",
+        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/persistence": "^1.3",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-foundation": "5.0.*",
+        "symfony/orm-pack": "^1.0",
         "symfony/routing": "5.0.*",
         "symfony/templating": "5.0.*",
         "symfony/twig-pack": "^1.0",
