--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
         "roave/security-advisories": "dev-master",
         "symfony/maker-bundle": "^1.15"
     },
@@ -61,6 +62,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "cgl": [
+            "php-cs-fixer fix --config build/.php_cs.dist"
         ]
     },
     "conflict": {
