--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /.php_cs
 /.php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> overtrue/phplint ###
+/.phplint.cache
+###< overtrue/phplint ###
