--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "roave/security-advisories": "dev-master",
-        "symfony/maker-bundle": "^1.15"
+        "symfony/maker-bundle": "^1.15",
+        "overtrue/phplint": "^1.1"
     },
     "config": {
         "preferred-install": {
@@ -65,6 +66,9 @@
         ],
         "cgl": [
             "php-cs-fixer fix --config build/.php_cs.dist"
+        ],
+        "test:php:lint": [
+            "phplint --configuration=build/.phplint.yml"
         ]
     },
     "conflict": {
